Endret koden for skriv og les
Rettet opp koden for å skrive og lese til og fra dataplattformen.

--- a/notebooks/1. Introduksjon/2. Datasett og felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/2. Datasett og felles datalager.ipynb
@@ -540,37 +540,72 @@
     "    .format(\"gsim\")\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .save('/felles/veiledning/pyspark/eksempler/landkode')\n",
-    "\n",
+    "    .path('/felles/veiledning/pyspark/eksempler/landkode')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_land_areal.write\\\n",
     "    .format(\"gsim\")\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .save('/felles/veiledning/pyspark/eksempler/areal')\n",
-    "\n",
+    "    .path('/felles/veiledning/pyspark/eksempler/areal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_land_bnp.write\\\n",
     "    .format(\"gsim\")\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .save('/felles/veiledning/pyspark/eksempler/bnp')\n",
-    "\n",
+    "    .path('/felles/veiledning/pyspark/eksempler/bnp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_land_innbyggerantall_2020.write\\\n",
     "    .format(\"gsim\")\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .save('/felles/veiledning/pyspark/eksempler/innbyggerantall/2020')\n",
-    "    \n",
+    "    .path('/felles/veiledning/pyspark/eksempler/innbyggerantall/2020')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_land_innbyggerantall_2018.write\\\n",
     "    .format(\"gsim\")\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .save('/felles/veiledning/pyspark/eksempler/innbyggerantall/2018')\n",
-    "\n",
+    "    .path('/felles/veiledning/pyspark/eksempler/innbyggerantall/2018')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_land_innbyggerantall_2017.write\\\n",
     "    .format(\"gsim\")\\\n",
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
-    "    .save('/felles/veiledning/pyspark/eksempler/innbyggerantall/2017')"
+    "    .path('/felles/veiledning/pyspark/eksempler/innbyggerantall/2017')"
    ]
   },
   {
