--- a/notebooks/1. Introduksjon/3. Lese eksempeldata fra dataplattformen.ipynb
+++ b/notebooks/1. Introduksjon/3. Lese eksempeldata fra dataplattformen.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "#Endre parameteret i ...load(\" \")\n",
     "\n",
-    "spark.read.format(\"gsim\").load(\"/kilde/ske/fr*\").show(50, False)"
+    "spark.read.path(\"/kilde/*\").show(10, False)"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler*\").show(7,False)"
+    "spark.read.path(\"/felles/veiledning/pyspark/eksempler*\").show(10, False)"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
+    "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
     "\n",
     "print(\"*********************************** AREAL ***********************************\")\n",
     "df_areal.show(50,False)"
