--- a/notebooks/2. Funksjoner i klargjøring/3. Koble datasett.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/3. Koble datasett.ipynb
@@ -50,9 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
-    "df_bnp = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/bnp\")\n",
-    "df_innbyggerantall = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/2020/innbyggerantall\")"
+    "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
+    "df_bnp = spark.read.path(\"/felles/veiledning/pyspark/eksempler/bnp\")\n",
+    "df_innbyggerantall = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")"
    ]
   },
   {
@@ -152,6 +152,13 @@
     "df_areal_innbyggerantall_union = df_areal.join(df_innbyggerantall, 'Land','outer')\n",
     "df_areal_innbyggerantall_union.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
