--- a/notebooks/2. Funksjoner i klargjøring/4. Sammensette.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/4. Sammensette.ipynb
@@ -58,9 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_land_innbyggerantall_2020  = spark.read.path(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
-    "df_land_innbyggerantall_2018  = spark.read.path(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2018\")\n",
-    "df_land_innbyggerantall_2017  = spark.read.path(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2017\")"
+    "df_land_innbyggerantall_2020  = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
+    "df_land_innbyggerantall_2018  = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2018\")\n",
+    "df_land_innbyggerantall_2017  = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2017\")"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_land_innbyggerantall_2020_utsnitt = df_land_innbyggerantall.filter((df_land_innbyggerantall.Landkode == 'NO'))\n",
+    "df_land_innbyggerantall_2020_utsnitt = df_land_innbyggerantall_2020.filter((df_land_innbyggerantall_2020.Landkode == 'NO'))\n",
     "df_land_innbyggerantall_2020_utsnitt.show(5, False)"
    ]
   },
@@ -249,6 +249,13 @@
     "df_sammensatt = unequal_union_sdf(df_land_innbyggerantall_2020_utsnitt, df_land_innbyggerantall_2018_ny)\n",
     "df_sammensatt.show(10, False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
