--- a/notebooks/2. Funksjoner i klargjøring/5. Logisk imputering.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/5. Logisk imputering.ipynb
@@ -24,8 +24,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def set_neg_to_zero(df, col_names):\n",
     "    for col_name in col_names:\n",
@@ -76,10 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_areal = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
-    "#df_bnp = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/bnp\")\n",
-    "df_innbyggerantall_2020 = spark.read.path(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
-    "df_innbyggerantall_2018 = spark.read.path(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2018\")"
+    "df_areal = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
+    "df_bnp = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/bnp\")\n",
+    "df_innbyggerantall_2020 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
+    "df_innbyggerantall_2018 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2018\")"
    ]
   },
   {
@@ -202,6 +204,13 @@
     "df_bnp_imp_abs2 = set_neg_to_plus(df_bnp,['BNP'])\n",
     "df_bnp_imp_abs2.filter(df_bnp_imp2.Landkode.isin(['PT','SI'])).show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
