--- a/notebooks/2. Funksjoner i klargjøring/2. Håndtere dubletter.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/2. Håndtere dubletter.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "source": [
     "### 1. Lese inn og vise dataframe \n",
-    "<font size=2>Lese inn dataframe: <code><i>navn_dataframe</i>.spark.read.path(\"gsim\").load(\"/felles/sti\")</code>\n",
+    "<font size=2>Lese inn dataframe: <code><i>navn_dataframe</i>.spark.read.path(\"/felles/sti\")</code>\n",
     "Vise dataframe: <code><i>navn_dataframe</i>.show()</code>\n",
     "</font>"
    ]
@@ -63,7 +63,7 @@
    "source": [
     "#Her leses dataframen inn fra dataplattformen som vi ønsker å undersøke nærmere for dubletter\n",
     "\n",
-    "df_innbyggerantall = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall\")\n",
+    "df_innbyggerantall = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
     "\n",
     "# Her vises dataframen vi har lest inn \n",
     "df_innbyggerantall.show(30, False)"
@@ -255,9 +255,9 @@
    "outputs": [],
    "source": [
     "#Fjerner/dropper rader som er helt like\n",
-    "df_land_innbyggerantall_udub=df_land_innbyggerantall.dropDuplicates()\n",
-    "df_land_innbyggerantall_udub.show()\n",
-    "df_land_innbyggerantall_udub.count()\n",
+    "df_innbyggerantall_udub=df_innbyggerantall.dropDuplicates()\n",
+    "df_innbyggerantall_udub.show()\n",
+    "df_innbyggerantall_udub.count()\n",
     "#\n"
    ]
   },
@@ -268,9 +268,9 @@
    "outputs": [],
    "source": [
     "#Fjerner/dropper rader med duplikat på land\n",
-    "df_land_innbyggerantall_udubLand=df_land_innbyggerantall.dropDuplicates(['Land'])\n",
-    "df_land_innbyggerantall_udubLand.show()\n",
-    "df_land_innbyggerantall_udubLand.count()"
+    "df_innbyggerantall_udubLand=df_innbyggerantall.dropDuplicates(['Land'])\n",
+    "df_innbyggerantall_udubLand.show()\n",
+    "df_innbyggerantall_udubLand.count()"
    ]
   },
   {
