Lagt til en overskrift til
Må fylle inn kode

--- a/notebooks/3. Fellesfunksjoner (SSB)/2.kkMissing.ipynb
+++ b/notebooks/3. Fellesfunksjoner (SSB)/2.kkMissing.ipynb
@@ -26,13 +26,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #### Importer fellesfunksjonen fra SSB_Spark_tools"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    " "
-   ]
+   "source": []
   }
  ],
  "metadata": {
