Tekstretting av pivotering
Rettet litt opp i teksten under pivotering

--- a/notebooks/2. Funksjoner i klargjøring/7. Pivotere.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/7. Pivotere.ipynb
@@ -47,7 +47,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_land_innbyggerantall_2020       = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
     "df_land_innbyggerantall_2018  = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2018\")\n",
     "df_land_innbyggerantall_2017  = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2017\")"
    ]
@@ -66,15 +65,7 @@
    "outputs": [],
    "source": [
     "df_land_innbyggerantall_2018_2017 = df_land_innbyggerantall_2018.unionByName(df_land_innbyggerantall_2017)\n",
-    "df_land_innbyggerantall_2018_2017.show(10,False)\n",
-    "#antall_rader_2018       = df_land_innbyggerantall_2018.count()\n",
-    "#antall_rader_2017       = df_land_innbyggerantall_2017.count()\n",
-    "#antall_rader_2018_2017  = df_land_innbyggerantall_2018_2017.count()\n",
-    "\n",
-    "#print(\"antall rader i dataframe df_land_innbyggerantall 2018      : \"+ repr(antall_rader_2018))\n",
-    "#print(\"antall rader i dataframe df_land_innbyggerantall 2017      : \"+ repr(antall_rader_2017))\n",
-    "#print(\"antall rader i dataframe sammensatt                        : \"+ repr(antall_rader_2018_2017))\n",
-    "#print(\" \")"
+    "df_land_innbyggerantall_2018_2017.show(10,False)"
    ]
   },
   {
@@ -83,10 +74,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vrengetest = df_land_innbyggerantall_2018_2017.drop(\"Landkode\",\"Kilde\")\n",
-    "df_vrengt = df_vrengetest.groupBy(\"År\").pivot((\"Land\")).sum(\"Innbyggerantall\")\n",
-    "df_vrengetest.show()\n",
+    "df_land_og_innbyggere = df_land_innbyggerantall_2018_2017.drop(\"Landkode\",\"Kilde\")\n",
+    "df_vrengt = df_land_og_innbyggere.groupBy(\"År\").pivot((\"Land\")).sum(\"Innbyggerantall\")\n",
+    "df_land_og_innbyggere.show()\n",
     "df_vrengt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_land_og_innbyggere_med_id = df_land_innbyggerantall_2018_2017.withColumn(\"ID\", F.monotonically_increasing_id())\n",
+    "df_land_og_innbyggere_med_id.show()\n",
+    "#df_vrengt2 = df_land_og_innbyggere_med_id.groupBy(\"ID\").pivot(\"ID\").sum(\"Innbyggerantall\")\n",
+    "#df_vrengt2.show()"
    ]
   },
   {
