Endret litt på koden
Historisk imputering

--- a/notebooks/2. Funksjoner i klargjøring/5. Logisk imputering.ipynb
+++ b/notebooks/2. Funksjoner i klargjøring/5. Logisk imputering.ipynb
@@ -78,8 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_areal = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
-    "df_bnp = spark.read.format(\"gsim\").load(\"/felles/veiledning/pyspark/eksempler/bnp\")\n",
+    "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
+    "df_bnp = spark.read.path(\"/felles/veiledning/pyspark/eksempler/bnp\")\n",
     "df_innbyggerantall_2020 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
     "df_innbyggerantall_2018 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2018\")"
    ]
@@ -204,6 +204,64 @@
     "df_bnp_imp_abs2 = set_neg_to_plus(df_bnp,['BNP'])\n",
     "df_bnp_imp_abs2.filter(df_bnp_imp2.Landkode.isin(['PT','SI'])).show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lage datasett til bruk i eksempel på historisk imputering.\n",
+    "Først lages et mindre datasett over innbyggerantall i fire land i 2020. Deretter kobles et datsett med tall fra 2020 og et med tall fra 2018 sammen i neste paragraf. Variablene på datasettet fra 2018 gis nye navn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_innbyggerantall_2020_lite = df_innbyggerantall_2020.select(df_innbyggerantall_2020.columns).filter(df_innbyggerantall_2020.Landkode.isin(['FO','SE','BE','DK']))\n",
+    "df_innbyggerantall_2020_lite.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_innbyggere_2018 = df_innbyggerantall_2018.withColumnRenamed('Innbyggerantall','Innbyggerantall_2018').withColumnRenamed('År','Årstall').withColumnRenamed('Kilde','Kilde_2018').withColumnRenamed('Landkode','Landkode_2018')\n",
+    "df_innbyggere_2020_2018 = df_innbyggerantall_2020_lite.join(df_innbyggere_2018, 'Land', 'left')\n",
+    "df_innbyggere_2020_2018.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Til slutt lages et nytt datasett der verdier fra variablene fra 2018-datasettet er satt inn for verdiene der innbyggerantallet var 0.\n",
+    "Samtidig settes årstallet lik 2018 der vi har imputert 2018-tall og kilden endres til kilden fra 2018."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_midl = df_innbyggere_2020_2018.withColumn('Innbyggere', F.when(df_innbyggere_2020_2018['Innbyggerantall'] <= 0, df_innbyggere_2020_2018['Innbyggerantall_2018']).otherwise(df_innbyggere_2020_2018['Innbyggerantall']))\\\n",
+    "                                 .withColumn('Aar', F.when(df_innbyggere_2020_2018['Innbyggerantall'] <= 0, df_innbyggere_2020_2018['Årstall']).otherwise(df_innbyggere_2020_2018['År'])) \\\n",
+    "                                 .withColumn('Kilde_ny', F.when(df_innbyggere_2020_2018['Innbyggerantall'] <= 0, df_innbyggere_2020_2018['Kilde_2018']).otherwise(df_innbyggere_2020_2018['Kilde']))\n",
+    "    \n",
+    "df_innbyggere_imp = df_midl.select(['Land','Innbyggere','Aar','Kilde_ny']).withColumnRenamed('Innbyggere','Innbyggerantall').withColumnRenamed('Aar','År').withColumnRenamed('Kilde_ny','Kilde')\n",
+    "df_innbyggere_imp.show(10,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
