Endret på beskrivelsen av skrive og lese datasett
Skrive: Forklare write-funksjonen

Lese: Endre fra load til path-funksjonen

--- a/notebooks/1. Introduksjon/2. Datasett og felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/2. Datasett og felles datalager.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importere biblioteker"
+    "#### Importere biblioteker (kode)"
    ]
   },
   {
@@ -41,9 +41,7 @@
    "metadata": {},
    "source": [
     "### Konstruere en Dataframe i pyspark\n",
-    "OPPGAVE: Skriv hvilke datasett som lages og forklar kommentarene i koden\n",
-    "\n",
-    "<font size= 2>De neste paragrafene etableres tre datasett (<code>pyspark.sql.Dataframe</code>) for testformål.\n",
+    "De neste paragrafene etableres tre datasett (<code>pyspark.sql.Dataframe</code>) for testformål.\n",
     "\n",
     "Koden for å lage en dataframe i pyspark:\n",
     "<br><code>sqlContext.createDataFrame(<i>verdier</i>, <i>skjema</i>)</code>\n",
@@ -52,8 +50,7 @@
     "<br><code>skjema = StructType([StructField('<i>kolonne A</i>', <i>datatype</i>, <i>obligatorisk</i>)], [StructField('<i>kolonne B</i>', <i>datatype</i>, <i>obligatorisk</i>)], ...)></code>\n",
     "\n",
     "Mens verdier er et array av rekker av data: \n",
-    "<br><code>verdier = [('data i kolonne A', 'data i kolonnne B', ...), ('data i kolonne A', 'data i kolonnne B', ...), ...]</code>\n",
-    "</font>"
+    "<br><code>verdier = [('data i kolonne A', 'data i kolonnne B', ...), ('data i kolonne A', 'data i kolonnne B', ...), ...]</code>"
    ]
   },
   {
@@ -527,7 +524,26 @@
    "metadata": {},
    "source": [
     "### Forklar hvordan lagre data til datalager\n",
-    "Kenneth skriver"
+    "\n",
+    "Koden for å skrive datasettene (DataFrame) til datalageret på dataplattformen:\n",
+    "\n",
+    "<code> [DATAFRAME_NAME].write\\\\\n",
+    "    .format(\"gsim\")\\\\\n",
+    "    .option(\"valuation\", \"[VALUATION_VALUE]\")\\\\\n",
+    "    .option(\"state\", \"[STATE_VALUE]\")\\\\\n",
+    "    .path(\"[STORE_PATH]\")\n",
+    "</code>\n",
+    "\n",
+    "Verdiene for <code>valuation</code> (verdivurdering) og <code>state</code> (datatilstander) er beskrevet i kode: https://github.com/statisticsnorway/dapla-catalog-protobuf/blob/master/src/main/proto/dataset.proto\n",
+    "\n",
+    "Koden for å skrive datasettene laget i dette notatet følger i de neste paragrafene"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skrive datasettet df_land_kode til datalageret (kode)"
    ]
   },
   {
@@ -544,6 +560,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skrive datasettet df_land_areal til datalageret (kode)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -554,6 +577,13 @@
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
     "    .path('/felles/veiledning/pyspark/eksempler/areal')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skrive datasettet df_land_bnp til datalageret (kode)"
    ]
   },
   {
@@ -570,6 +600,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skrive datasettet df_land_innbyggerantall_2020 til datalageret (kode)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -583,6 +620,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skrive datasettet df_land_innbyggerantall_2018 til datalageret (kode)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -593,6 +637,13 @@
     "    .option(\"valuation\", \"INTERNAL\")\\\n",
     "    .option(\"state\", \"INPUT\")\\\n",
     "    .path('/felles/veiledning/pyspark/eksempler/innbyggerantall/2018')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skrive datasettet df_land_innbyggerantall_2017 til datalageret (kode)"
    ]
   },
   {
