--- a/notebooks/1. Introduksjon/3. Lese eksempeldata fra dataplattformen.ipynb
+++ b/notebooks/1. Introduksjon/3. Lese eksempeldata fra dataplattformen.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "## Hente data fra felles datalager\n",
-    "<font size=2>For å hente data fra datalager må du å vite hvor dataene ligger. Du må kjenne til stien til dataene (<i>data path</i>), som f.eks. \"felles/veiledning/pyspark/eksempler/areal\". Koden for å lese data i pyspark er: \n",
-    "<code>spark.read.format(\"gsim\").load(\"data path\")</code>\n",
+    "For å hente data fra datalager må du å vite hvor dataene ligger. Du må kjenne til stien til dataene (<i>data path</i>), som f.eks. \"felles/veiledning/pyspark/eksempler/areal\". Koden for å lese data i pyspark er: \n",
+    "<code>spark.read.path(\"data path\")</code>\n",
     "\n",
     "Pyspark-funksjonen trenger å importere pyspark.sql.DataFrame: <code>from pyspark.sql import DataFrame</code>\n",
     "</font>"
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Endre parameteret i ...load(\" \")\n",
+    "#Endre parameteret i ...path(\" \")\n",
     "\n",
     "spark.read.path(\"/kilde/*\").show(10, False)"
    ]
