Tilpasset oppgaveteksten til løsningsforslaget
Oppgave 1 ble 2 og oppgave 2 ble 1, også har jeg endret litt innledningsvis om veilederen...

--- a/notebooks/1. Introduksjon/1. Om veilederen.ipynb
+++ b/notebooks/1. Introduksjon/1. Om veilederen.ipynb
@@ -27,7 +27,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hva er pyspark"
+    "### Hva er pyspark\n",
+    "\"PySpark is the collaboration of Apache Spark and Python. Apache Spark is an open-source cluster-computing framework, built around speed, ease of use, and streaming analytics whereas Python is a general-purpose, high-level programming language\".\n",
+    "..."
    ]
   },
   {
@@ -38,27 +40,6 @@
     "<font size=2>Oppgave: forklare hva og hvordan bruke biblioteker i pyspark, peke til hvor bibliotekene er beskrevet appache.spark....\n",
     "</font>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3>Innhold</h3>\n",
-    "<font size=2><ul>\n",
-    "<li><a href=\"\" target=\"1. Om veilederen\">1. Om veilederen</a> \n",
-    "<li><a href=\"\" target=\"2. Datasett og felles datalager\">2. Datasett og felles datalager</a>\n",
-    "<li><a href=\"\" target=\"3. Pyspark funksjoner i klargjøring\">3. Pyspark funksjoner i klargjøring</a>\n",
-    "<li><a href=\"\" target=\"4. Fellesfunksjoner (SSB)\">4. Fellesfunksjoner (SSB)</a>\n",
-    "</ul>\n",
-    "</font>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
