--- a/notebooks/4. Oppgaver/Oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Oppgave 1.ipynb
@@ -4,8 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Oppgave 1: Finne landene med høyeste og laveste BNP per capita\n",
-    "Vi tar utgangspunkt i datasettet om innbyggerantall registrert i 2020. Det finnes foreløpig bare ett datasett med oversikt over landenes BNP."
+    "### Oppgave 1: Finne landene med høyeste og laveste befolkningstetthet?\n",
+    "Hint: Se eksemplet i veilederen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Laster inn bibliotek:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import DataFrame\n",
+    "from pyspark.sql.types import *\n",
+    "import pyspark.sql.functions as F"
    ]
   },
   {
@@ -21,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne og lese inn datasettene om innbyggerantall og bnp\n"
+    "#skriv koden for å finne og lese inn datasettene om innbyggerantall 2020 og areal\n"
    ]
   },
   {
@@ -37,14 +57,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne og eventuelt fjerne dubletter\n"
+    "# Skriv kode for å sjekke og evt. fjerne dubletter\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.3 Koble datasett"
+    "1.3  Koble datasett"
    ]
   },
   {
@@ -53,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å koble datasettene\n"
+    "# Skriv kode for å koble sammen datasettene (innbyggerantall og areal)\n"
    ]
   },
   {
@@ -69,14 +89,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å lage ny variabel (BNP/innbyggerantall)\n"
+    "# Skriv kode for å lage en ny variabel for befolkningstetthet\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.5 Finne min og maks"
+    "1.5 Finne maks og min"
    ]
   },
   {
@@ -85,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne min og maks på nye variabelen\n"
+    "# Skrive kode for å finne maks og min av befokningstetthet\n"
    ]
   },
   {
