--- a/notebooks/4. Oppgaver/Oppgave 2.ipynb
+++ b/notebooks/4. Oppgaver/Oppgave 2.ipynb
@@ -4,15 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Oppgave 2: Finne landene med høyeste og laveste befolkningstetthet?\n",
-    "Hint: Se eksemplet i veilederen"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2.1 Fjerne dubletter"
+    "### Oppgave 2: Finne landene med høyeste og laveste BNP per capita\n",
+    "Vi tar utgangspunkt i datasettet om innbyggerantall registrert i 2020. Det finnes foreløpig bare ett datasett med oversikt over landenes BNP."
    ]
   },
   {
@@ -21,14 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å sjekke og evt. fjerne dubletter\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2.2  Koble datasett"
+    "Laster inn bibliotek:"
    ]
   },
   {
@@ -37,14 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å koble sammen datasettene (innbyggerantall og areal)\n"
+    "from pyspark.sql import DataFrame\n",
+    "from pyspark.sql.types import *\n",
+    "import pyspark.sql.functions as F"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3 Lage en ny variabel"
+    "2.1 Finne og leses inn datasett"
    ]
   },
   {
@@ -53,14 +41,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å lage en ny variabel for befolkningstetthet\n"
+    "#skriv koden for å finne og lese inn datasettene om innbyggerantall og bnp\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.4 Finne maks og min"
+    "2.2 Fjerne dubletter"
    ]
   },
   {
@@ -69,7 +57,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skrive kode for å finne maks og min av befokningstetthet\n"
+    "#skriv koden for å finne og eventuelt fjerne dubletter\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.3 Koble datasett"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#skriv koden for å koble datasettene\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.4 Lage en ny variabel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#skriv koden for å lage ny variabel (BNP/innbyggerantall)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2.5 Finne min og maks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#skriv koden for å finne min og maks på nye variabelen\n"
    ]
   },
   {
