Laget løsningsforslag for oppgave 1 og 2

--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -68,9 +68,8 @@
     "#Sorterer etter land og innbyggerantall og lister ut den sorterte dataframen\n",
     "print(\"*********************************** INNBYGGERANTALL SORTERT ETTER LAND OG INNBYGGERANTALL ***********************************\")\n",
     "\n",
-    "df_innbyggerantall_2020_sort = df_innbyggerantall_2020.orderBy(['Land','Innbyggerantall'])\n",
+    "df_innbyggerantall_2020_sort = df_innbyggerantall_2020.orderBy(['Land','Innbyggerantall'], ascending=[1, 0])\n",
     "df_innbyggerantall_2020_sort.show(50,False)\n",
-    "\n",
     "\n",
     "#Tar ut oversikt over de radene med likt \"land\" som forekommer flere enn en gang i dataframen, og sånn sett utgjør den samlede mengden av duplikater\n",
     "df_land_dub_alle  = df_innbyggerantall_2020_sort.join(df_innbyggerantall_2020_sort.groupBy('Land')\\\n",
@@ -80,22 +79,9 @@
     "print(\"*********************************** OVERSIKT OVER DUPLIKATER ***********************************\")\n",
     "df_land_dub_alle.show()  \n",
     "\n",
-    "#Velger den siste duplikaten\n",
-    "#Overfører df_land_dub_alle til pandas dataframe (pdf)\n",
-    "pdf = df_innbyggerantall_2020_sort.toPandas()\n",
-    "df_pdf_udub = pdf.drop_duplicates(subset=['Land'], keep='last', inplace=False)\n",
-    "\n",
-    "#Overfører \"tilbake\" til spark dataframe\n",
-    "schema_land_innbyggerantall_2020 = StructType([\\\n",
-    "    StructField('Land',StringType(), False),\\\n",
-    "    StructField('Landkode',StringType(), False),\\\n",
-    "    StructField('Innbyggerantall', IntegerType(), False),\\\n",
-    "    StructField('År', IntegerType(), False),\\\n",
-    "    StructField('Kilde', StringType(), False)])\n",
-    "\n",
-    "df_innbyggere_udub = spark.createDataFrame(df_pdf_udub,  schema_land_innbyggerantall_2020)\n",
-    "print(\"*********************************** DATASETTET UTEN DUBLETTER ***********************************\")\n",
-    "df_innbyggere_udub.show(50,False)"
+    "print(\"*********************************** INNBYGGERANTALL UTEN DUBLIKATER. HØYESTE INNBYGGERANTALL ER BEHOLDT ***********************************\")\n",
+    "df_innbyggerantall_udub= df_innbyggerantall_2020_sort.drop_duplicates(subset=['Land'])\n",
+    "df_innbyggerantall_udub.show(50,False)\n"
    ]
   },
   {
@@ -109,7 +95,7 @@
     "#Sorterer etter land og areal og lister ut den sorterte dataframen\n",
     "print(\"*********************************** AREALDATASETT SORTERT ETTER LAND OG AREAL ***********************************\")\n",
     "\n",
-    "df_areal_sort = df_areal.orderBy(['Land','Areal'])\n",
+    "df_areal_sort = df_areal.orderBy(['Land','Areal'], ascending=[1, 1])\n",
     "df_areal_sort.show(50,False)\n",
     "\n",
     "\n",
@@ -121,22 +107,9 @@
     "print(\"*********************************** OVERSIKT OVER DUPLIKATER ***********************************\")\n",
     "df_areal_dub_alle.show()  \n",
     "\n",
-    "#Velger den siste duplikaten\n",
-    "#Overfører df_land_dub_alle til pandas dataframe (pdf)\n",
-    "pdf2 = df_areal_sort.toPandas()\n",
-    "df_pdf2_udub = pdf2.drop_duplicates(subset=['Land'], keep='first', inplace=False)\n",
-    "\n",
-    "#Overfører \"tilbake\" til spark dataframe\n",
-    "schema_areal = StructType([\\\n",
-    "    StructField('Land',StringType(), False),\\\n",
-    "    StructField('Areal', IntegerType(), False),\\\n",
-    "    StructField('Årstall', IntegerType(), False),\\\n",
-    "    StructField('Landkode',StringType(), False),\\\n",
-    "    StructField('Kilde', StringType(), False)])\n",
-    "\n",
-    "df_areal_udub = spark.createDataFrame(df_pdf2_udub,  schema_areal)\n",
-    "print(\"*********************************** DATASETTET UTEN DUBLETTER ***********************************\")\n",
-    "df_areal_udub.show(50,False)"
+    "print(\"*********************************** AREALDATSETTET UTEN DUBLETTER: MINSTE AREAL BEHOLDT ***********************************\")\n",
+    "df_areal_udub= df_areal_sort.drop_duplicates(subset=['Land'])\n",
+    "df_areal_udub.show(50,False)\n"
    ]
   },
   {
@@ -154,6 +127,7 @@
    "source": [
     "# Skriv kode for å koble sammen datasettene (innbyggerantall og areal)\n",
     "df_areal_innbyggerantall = df_areal_udub.join(df_innbyggere_udub, 'Land', 'inner')\n",
+    "print(\"*********************************** SAMMENKOBLET DATASETT ***********************************\")\n",
     "df_areal_innbyggerantall.show(50,False)"
    ]
   },
@@ -172,6 +146,7 @@
    "source": [
     "# Skriv kode for å lage en ny variabel for befolkningstetthet\n",
     "df_areal_innbyggerantall = df_areal_innbyggerantall.withColumn('Befolkningstetthet',df_areal_innbyggerantall['Innbyggerantall']/df_areal_innbyggerantall['Areal'])\n",
+    "print(\"*********************************** SAMMENKOBLET DATASETT MED NY VARIABEL ***********************************\")\n",
     "df_areal_innbyggerantall.show(50,False)"
    ]
   },
@@ -191,6 +166,7 @@
     "# Skrive kode for å finne maks og min av befokningstetthet\n",
     "from pyspark.sql.functions import mean, min, max\n",
     "result = df_areal_innbyggerantall.select([min(\"Befolkningstetthet\"), max(\"Befolkningstetthet\")])\n",
+    "print(\"*********************************** MINIMUM OG MAKSIMUM AV VARIABELEN BEFOLKNINGSTETTHET ***********************************\")\n",
     "result.show()\n"
    ]
   },
