--- a/notebooks/4. Oppgaver/Løsning oppgave 2.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 2.ipynb
@@ -67,7 +67,7 @@
     "#Sorterer etter land og innbyggerantall og lister ut den sorterte dataframen\n",
     "print(\"*********************************** INNBYGGERANTALL SORTERT ETTER LAND OG INNBYGGERANTALL ***********************************\")\n",
     "\n",
-    "df_innbyggerantall_2020_sort = df_innbyggerantall_2020.orderBy(['Land','Innbyggerantall'])\n",
+    "df_innbyggerantall_2020_sort = df_innbyggerantall_2020.orderBy(['Land','Innbyggerantall'], ascending=[1, 0])\n",
     "df_innbyggerantall_2020_sort.show(50,False)\n",
     "\n",
     "\n",
@@ -79,22 +79,9 @@
     "print(\"*********************************** OVERSIKT OVER DUPLIKATER ***********************************\")\n",
     "df_land_dub_alle.show()  \n",
     "\n",
-    "#Velger den siste duplikaten\n",
-    "#Overfører df_land_dub_alle til pandas dataframe (pdf)\n",
-    "pdf = df_innbyggerantall_2020_sort.toPandas()\n",
-    "df_pdf_udub = pdf.drop_duplicates(subset=['Land'], keep='last', inplace=False)\n",
-    "\n",
-    "#Overfører \"tilbake\" til spark dataframe\n",
-    "schema_land_innbyggerantall_2020 = StructType([\\\n",
-    "    StructField('Land',StringType(), False),\\\n",
-    "    StructField('Landkode',StringType(), False),\\\n",
-    "    StructField('Innbyggerantall', IntegerType(), False),\\\n",
-    "    StructField('År', IntegerType(), False),\\\n",
-    "    StructField('Kilde', StringType(), False)])\n",
-    "\n",
-    "df_innbyggere_udub = spark.createDataFrame(df_pdf_udub,  schema_land_innbyggerantall_2020)\n",
-    "print(\"*********************************** DATASETTET UTEN DUBLETTER ***********************************\")\n",
-    "df_innbyggere_udub.show(50,False)"
+    "print(\"*********************************** INNBYGGERANTALL UTEN DUBLIKATER. HØYESTE INNBYGGERANTALL ER BEHOLDT ***********************************\")\n",
+    "df_innbyggerantall_udub= df_innbyggerantall_2020_sort.drop_duplicates(subset=['Land'])\n",
+    "df_innbyggerantall_udub.show(50,False)\n"
    ]
   },
   {
@@ -134,7 +121,8 @@
    "outputs": [],
    "source": [
     "#skriv koden for å koble datasettene\n",
-    "df_bnp_innbyggerantall = df_bnp.join(df_innbyggere_udub, 'Land', 'inner')\n",
+    "df_bnp_innbyggerantall = df_bnp.join(df_innbyggerantall_udub, 'Land', 'inner')\n",
+    "print(\"*********************************** SAMMENKOBLET DATASETT ***********************************\")\n",
     "df_bnp_innbyggerantall.show(50,False)"
    ]
   },
@@ -153,6 +141,7 @@
    "source": [
     "#skriv koden for å lage ny variabel (BNP/innbyggerantall)\n",
     "df_bnp_innbyggerantall = df_bnp_innbyggerantall.withColumn('BNP per capita',df_bnp_innbyggerantall['BNP']/df_bnp_innbyggerantall['Innbyggerantall'])\n",
+    "print(\"*********************************** SAMMENKOBLET DATASETT MED NY VARIABEL ***********************************\")\n",
     "df_bnp_innbyggerantall.show(50,False)"
    ]
   },
@@ -173,6 +162,7 @@
     "\n",
     "from pyspark.sql.functions import mean, min, max\n",
     "result = df_bnp_innbyggerantall.select([mean(\"BNP per capita\"), min(\"BNP per capita\"), max(\"BNP per capita\")])\n",
+    "print(\"*********************************** Minimum, maksimum og gjennomsnitt av BNP per capita ***********************************\")\n",
     "result.show()\n"
    ]
   },
