Endret løsningsforslag for oppgave 1
Delt opp koden noe
Fjernet 0 observasjoner fra datasettene
Rettet opp en feil

--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -5,14 +5,19 @@
    "metadata": {},
    "source": [
     "### Oppgave 1: Finne landene med høyeste og laveste befolkningstetthet\n",
-    "Hint: Se eksemplet i veilederen"
+    "\n",
+    "For å løse oppgaven må vi først finne datasettene med data om landenes innbyggertall og areal.\n",
+    "\n",
+    "Deretter ¨kobler vi datasettene. Vi velger fjerne land med missing eller 0 i antall innbyggere eller areal, i tillegg fjerner vi dubletter, selv om det strengt tatt ikke er nødvendig for å finne landene med høyeste og laveste befolkningstetthet.\n",
+    "\n",
+    "Når datasettet er slått sammen, lager vi variabelen <code>befolkningstetthet</code> og finner så høyeste og laveste verdi."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Laster inn bibliotek:"
+    "#### Laster inn bibliotek:"
    ]
   },
   {
@@ -30,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.1  Finne og leses inn datasett"
+    "#### 1.1  Finne og leses inn datasett"
    ]
   },
   {
@@ -39,11 +44,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne og lese inn datasettene om innbyggerantall 2020 og areal\n",
-    "spark.read.path(\"/felles/veiledning/pyspark/eksempler*\").show(10, False)\n",
-    "\n",
-    "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")\n",
-    "df_innbyggerantall_2020 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")\n",
+    "# lete etter datasettene om innbyggerantall 2020 og areal\n",
+    "spark.read.path(\"/felles/veiledning/pyspark/eksempler*\").show(10, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lese inn datasettet om landenes innbyggerantall i 2020\n",
+    "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lese inn datasettet om landenes areal\n",
+    "df_innbyggerantall_2020 = spark.read.path(\"/felles/veiledning/pyspark/eksempler/innbyggerantall/2020\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skrive ut dataene\n",
     "print(\"*********************************** AREAL ***********************************\")\n",
     "df_areal.show(50,False)\n",
     "print(\"*********************************** INNBYGGERANTALL 2020 ***********************************\")\n",
@@ -54,7 +85,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.2 Fjerne dubletter"
+    "#### 1.2 Fjerne observasjoner som er 0\n",
+    "Finn og fjerne observasjoner som er 0 for variablene <code>Innbyggerantall</code> og <code>Areal</code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_innbyggerantall_2020 = df_innbyggerantall_2020.filter(df_innbyggerantall_2020.Innbyggerantall>0)\n",
+    "df_innbyggerantall_2020.show(50, False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.3 Fjerne dubletter"
    ]
   },
   {
